<resources>
    <string name="app_name">Wallmart</string>
    <string name="sign_in_title">Sign in to your account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="dh">======Do not have an account?======</string>
    <string name="na">Create a new account</string>
    <string name="em">Email address (required)</string>
    <string name="pd">Password (required)</string>
    <string name="stringe">Electronics</string>
    <string name="stringc">Clothing</string>
    <string name="stringb">Beauty</string>
    <string name="stringf">Food</string>
    <string name="strfname">First name*</string>
    <string name="stringlname">Last name*</string>
    <string name="reemail">Email address*</string>
    <string name="repas">Password*</string>
    <string name="regstring">* required field</string>
    <string name="str_create">Create your account</string>
    <string name="regregstring">Create Account</string>
</resources>