<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageviewlogo"
        android:layout_marginTop="60dp"
        android:layout_width="160dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/walmart" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/str_create"
        android:textColor="@color/dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageviewlogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/bk"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv">


        <TextView
            style="@style/label"
            android:text="@string/strfname"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/firstname"
            android:inputType="textPersonName"
            style="@style/input"/>

        <TextView
            style="@style/label"
            android:layout_marginTop="16dp"
            android:text="@string/stringlname" />

        <EditText
            android:id="@+id/lastname"
            android:inputType="textPersonName"
            style="@style/input" />

        <TextView
            style="@style/label"
            android:layout_marginTop="16dp"
            android:text="@string/reemail" />

        <EditText
            android:id="@+id/edittextemail"
            style="@style/input"
            android:inputType="textEmailAddress"/>

        <TextView
            style="@style/label"
            android:layout_marginTop="16dp"
            android:text="@string/repas" />

        <EditText
            android:id="@+id/ps"
            style="@style/input"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:text="@string/regregstring"
            android:textAllCaps="false"
            android:minHeight="56dp"
            android:textColor="@color/white"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>